examples/test/testpolicy12537.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12537
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key15: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value11
          key8: value16
          key22: value7
      podSelector:
        matchLabels:
          key33: value22
